--- a/pages/contact.html
+++ b/pages/contact.html
@@ -85,7 +85,7 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
     </object>
       </div>
 -->
-      <div id="rectd">                                    <!-- Cadre Etudes et formations -->
+  <!--    <div id="rectd">
         <p class="titre">Education</p>
         <p class="text">
 	<p class="stitre">Master's Degree in Computer Music Production</p>Jean Monnet University - Saint-Étienne, 2021-2023</br>
@@ -98,7 +98,7 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
  </br><i>Awarded the BEM (Brevet d'Études Musicales), CEM Level</i>
       </div>
 
-
+ -->
 
       <div id="rectexp">
 
@@ -278,6 +278,7 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
 	</body>
 
 </html>
+
 
 
 
