--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,8 +55,8 @@
 	      <div id="rectg">
         <p class="titre">Rémi GEORGES </p>
         <p class="text"> 
-		      <p class="stitre"> Computer Music Designer, 
-Sound Technician,</br>Live-Coder Artist </p>
+		      <p class="stitre"> Computer Music Designer, Composer 
+Sound Technician,</br>Live Coder Artist </p>
 		      <br>
 		      Rémi Georges is a computer music designer, sound artist and composer based in
 Lyon. </br>His practice unfolds through interactive sound installations, algorithmic and
@@ -110,15 +110,10 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
       live-coder artist,<br>
       computer music designer, sound technician
     </p>
-
-    <p>
-      <a href="https://remigeorges.fr" target="_blank">https://remigeorges.fr</a><br>
-      +33 6 86 43 41 30<br>
-      <a href="mailto:remi.georges@protonmail.com">remi.georges@protonmail.com</a>
-    </p>
   </header>
 
-  <section>
+  <div id="rectd">
+	<section>
     <h2>Education</h2>
 
     <p>
@@ -147,7 +142,9 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
       Conservatoire Toulon-Provence-Méditerranée, 2008-2018
     </p>
   </section>
+  </div>
 
+<div id="rectexp">
   <section>
     <h2>Selected Works</h2>
 
@@ -220,12 +217,14 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
       <a href="mailto:remi.georges@protonmail.com">remi.georges@protonmail.com</a>
     </p>
   </section>
-
+	
   <section>
     <h2>Performances</h2>
     <p>Entire list on ralt144mi.remigeorges.fr</p>
   </section>
+</div>
 
+	<div id="rectd">
   <section>
     <h2>Workshops</h2>
 
@@ -242,7 +241,8 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
     <p>How I’m Live-coding Old Gears, CreativeCodeLyon, FR – Performance – 2023</p>
     <p>TidalCycles Workshop, AERI Le Fuz, Paris, FR – Workshop – 2022</p>
   </section>
-
+	</div>
+<div id="rectg">
   <section>
     <h2>Group Exhibitions and Curation</h2>
 
@@ -252,7 +252,8 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
     <p>Crash Party, with Cookie Collective, Amaze Festival, Panke Gallery, Berlin, DE – 2023</p>
     <p>D.I.Y, with Alitché Monnery, Lyon, FR – 2022</p>
   </section>
-
+</div>
+	<div id="rectd">
   <section>
     <h2>Residencies</h2>
 
@@ -262,13 +263,10 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
     <p>Grame, National Center for musical Creation, Lyon – 2024</p>
     <p>Fubar Glitch Art Festival – 2023 and 2024</p>
 
-    <p>
-      <a href="https://youtu.be/sj_QfM_iexI?si=MsQ_oy11W7py1soQ" target="_blank">
-        YouTube performance
-      </a>
-    </p>
+
   </section>
 </div>
+	</div>
 
 		  
       </div>
@@ -278,6 +276,7 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
 	</body>
 
 </html>
+
 
 
 
